# Pocket-OS-Cardputer-ABV

./: .gitignore  AUDIT.md  CHANGELOG.md  CMakeLists.txt  README-FIRST-RUN.md  README.md  SECURITY.md  TESTING.md  partitions.csv  platformio.ini  sdkconfig.defaults
components/minimp3/: CMakeLists.txt  minimp3_decoder.cpp
docs/: ADVENTURE_LORA_ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  BROWSER_ARCHITECTURE.md  MAC_COMPANION.md  MAC_COMPANION_REFERENCES.md  PRODUCT_ARCHITECTURE.md  PROJECT_STATUS.md  RECORDING_ARCHITECTURE.md  ROADMAP.md  SMOKE_TEST.md  VISUAL_LAYER_ARCHITECTURE.md
docs/decision-receipts/: README.md  TEMPLATE.yaml
include/: App.h  AppManager.h  Apps.h  Features.h  FileBrowser.h  NetworkManager.h  PowerManager.h  SettingsManager.h  StorageManager.h  TerminalUI.h  TextEditor.h
main/: CMakeLists.txt  main.cpp  persistence.cpp  persistence.h
main/assets/: abvx_splash.h
sdcard_template/ai/: README.txt
sdcard_template/books/: README.txt
sdcard_template/config/: ai.json  app_state.json  randomizer_lists.txt  settings.json
sdcard_template/logs/: README.txt
sdcard_template/music/: README.txt
sdcard_template/notes/: README.txt
sdcard_template/recordings/: README.txt
sdcard_template/tmp/: README.txt
sim/: Makefile  main.cpp
src/: main.cpp
src/apps/: Apps.cpp
src/components/: FileBrowser.cpp  TextEditor.cpp
src/core/: InputManager.cpp  (+2 more)
tests/: music_prepare_test.py  persistence_test.cpp
tools/: abvx_companion.py  cardputer_time_sync.py  cardputer_upload.py  make_release.py  prepare_music.py  prepare_sdcard.py  validate_sdcard.py
(+15 files in other folders)
